<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:layout_width="168dp"
        android:layout_height="154dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/orang" />

    <TableRow
        android:paddingTop="10px"
        android:gravity="center"
        android:layout_marginTop="20px">


    </TableRow>
    <!-- Baris pertama -->
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:paddingEnd="16dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:id="@+id/editTextNama"
            android:hint="Enter Your Name" />
    </TableRow>

    <!-- Baris kedua -->
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usia"
            android:textStyle="bold"
            android:paddingEnd="16dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:id="@id/editTextUsia"
            android:hint="Enter Your Phone Number" />
    </TableRow>

    <!-- Baris ketiga -->

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textStyle="bold"
            android:paddingEnd="16dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:id="@+id/editTextUsia"
            android:hint="Enter Your Address" />
    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="Submit"></Button>
    </TableRow>
</TableLayout>
